--- a/src/components/project/model5.astro
+++ b/src/components/project/model5.astro
@@ -1,6 +1,3 @@
----
----
-
 <script>
   const statusPairs = [
     [
@@ -10,7 +7,7 @@
   ]
   const modelPairs = [
     [
-      'Coding',
+      'Website',
       'mt-1 ml-1 bg-blue-500 text-white px-2 pt-1 flex-initial rounded-xl',
     ],
   ]
@@ -64,18 +61,17 @@
       data-modal-toggle="Model5"
       class="h-full w-full py-2"
       type="button"
-      disabled
     >
       <div
         class="overflow-hidden rounded-lg bg-white shadow-lg hover:bg-neutral-200 hover:shadow-2xl"
-        id="Siravij"
+        id="punroon"
       >
         <div class="bg-gray-500">
           <img
             class="mx-auto w-auto sm:h-24 md:h-56"
-
-            height="fit-content"
-            width="fit-content"
+            src="/project/gen1/gen1.webp "
+            height="auto"
+            width="auto"
           />
         </div>
         <div class="">
@@ -130,6 +126,7 @@
         <!-- Modal body -->
         <div class="space-y-6 p-6">
           <article>
+            <h1>Aisha KPOP</h1>
             <div class="corosel4">
               <div
                 id="default-carousel"
@@ -139,21 +136,12 @@
                 <!-- Carousel wrapper -->
                 <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
                   <!-- Item 1 -->
-                  <div class="ease-700 hidden ease-in-out" data-carousel-item>
-                    <img
-                      src="/member/webp/Siravij-RedDepot.webp "
-                      class="absolute left-1/2 top-1/2 block h-56 w-auto -translate-x-1/2 -translate-y-1/2 md:h-96"
-                      alt="..."
-                    />
-                  </div>
-                  <!-- Item 2 -->
-                  <div class="ease-700 hidden ease-in-out" data-carousel-item>
-                    <img
-                      src="/member/webp/siravij.webp "
-                      class="absolute left-1/2 top-1/2 block h-56 w-auto -translate-x-1/2 -translate-y-1/2 md:h-96"
-                      alt="..."
-                    />
-                  </div>
+
+                  <img
+                    src="/project/gen1/gen1.webp "
+                    class="absolute left-1/2 top-1/2 block h-32 w-auto -translate-x-1/2 -translate-y-1/2 md:h-96"
+                    alt="..."
+                  />
                   <!-- Item 3 -->
                 </div>
                 <!-- Slider indicators -->
@@ -226,46 +214,34 @@
                 </button>
               </div>
             </div>
-            <div class="text-sm md:text-lg">
-              <div class="mt-4 flex">
-                <p class="flex-none">
-                  Position:<p class="flex-initial" id="statusSection5"></p>
-                </p>
-              </div>
-              <div class="flex">
-                <p class="mt-2 flex-none">
-                  Responsibility:<p id="modelsection5"></p>
-                </p>
-                <div></div>
-              </div>
-              <div class="flex">
-                <p class="mt-2 flex">Contact:</p>
-                <div class="flex">
-                  <p class="">
-                    About me:<p class="ml-1">
-                      Aisha vTuber Fanclub,Sattlelite builder
-                    </p>
-                  </p>
-                </div>
-              </div>
-              <!-- Modal footer -->
-              <div
-                class="-mb-7 flex items-center space-x-2 rounded-b border-t border-gray-200 p-6 dark:border-gray-600"
-              >
-                <button
-                  data-modal-hide="Model5"
-                  type="button"
-                  class="-ml-5 rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-600"
-                  >Close</button
-                >
-                <a
-                  href="Https://siravijbb.me"
-                  class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-600"
-                  >Github</a
-                >
-              </div>
+            <div class="mt-4 flex">
+              <p class="flex-none">
+                สถานะ:<p class="flex-initial" id="statusSection5"></p>
+              </p>
+            </div><div class="flex">
+              <p class="mt-2 flex-none flex-none">
+                รูปแบบ:<p id="modelsection5"></p>
+              </p><div></div>
             </div>
           </article>
+        </div>
+        <!-- Modal footer -->
+        <div
+          class="flex items-center space-x-2 rounded-b border-t border-gray-200 p-6 dark:border-gray-600"
+        >
+          <button
+            data-modal-hide="Model5"
+            type="button"
+            class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-600"
+            >ปิด</button
+          >
+          <a
+            href="https://archived.siravijbb.com/"
+            data-modal-hide="model9"
+            type="button"
+            class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-600"
+            >Link</a
+          >
         </div>
       </div>
     </div>
