--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,22 +22,24 @@ import Footer from '../components/Footer.astro'
     <div
       class="relative flex h-screen w-full flex-col items-center justify-center overflow-hidden"
     >
-      <div class="-mt-96 lg:-mt-96 pl-10 z-10 w-full text-left text-4xl text-white ">
-        <div class="bg-gray-900 w-fit p-4 rounded-xl">
-        Welcome to<b class="text-[#ab98ff] underline"
-          > Siravij's</b> Personal Website
+      <div
+        class="z-10 -mt-96 w-full pl-10 text-left text-4xl text-white lg:-mt-96"
+      >
+        <div class="w-fit rounded-xl bg-gray-900 p-4">
+          Welcome to<b class="text-[#ab98ff] underline"> Siravij's</b> Personal Website
           <span class="block text-xl">I'm Siravij Praevisavakij</span>
-          <span class="block text-xl">Feel free to browse my website!</span></div>
+          <span class="block text-xl">Feel free to browse my website!</span>
+        </div>
       </div>
-        
-      <div class="z-10 flex  text-white pl-10 text-left -mt-96 lg:-mt-96">
-        
+
+      <div class="z-10 -mt-96 flex pl-10 text-left text-white lg:-mt-96">
       </div><div class="absolute w-full">
         <img
-        src="Siravij-RedDepot.jpg"
-        alt="It's Me,Siravij!"
-          class="w-full -mt-96 lg:-mt-80"
-          id="widget2"></img>
+          src="Siravij-RedDepot.jpg"
+          alt="It's Me,Siravij!"
+          class="-mt-96 w-full lg:-mt-80"
+          id="widget2"
+        />
       </div>
     </div>
   </main>
