--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -42,9 +42,9 @@ import Project13 from '../../components/project/model13.astro'
             My on working/archived project
           </h1>
           <img
-            src="/NR_Gear_logo_white.webp"
+            src="/favicon.jpg"
             class="flex w-full items-center space-x-28 rounded-2xl bg-gray-900 p-5 md:block md:w-auto"
-            alt="NORTH BANGKOK GEEKS ENGINEERING AWESOME ROBOTIC SOLUTIONS"
+            alt="Siravij's "
           />
           <p class="text-ellipsis p-4 text-sm xl:text-base">
             &nbsp;&nbsp;&nbsp;As a student, I have to do many projects. Some of
@@ -67,7 +67,6 @@ import Project13 from '../../components/project/model13.astro'
               On going/Not yet finnished
             </p>
             <ul class="grind grid grid-cols-1 gap-4 py-4 md:grid-cols-4">
-              <li><Project1 /></li>
               <li><Project2 /></li>
               <li><Project3 /></li>
               <li><Project4 /></li>
@@ -76,11 +75,13 @@ import Project13 from '../../components/project/model13.astro'
           <li class="">
             <p class="-mb-5 ml-1 text-center md:text-left">Archived</p>
             <ul class="grind grid grid-cols-1 gap-4 py-4 md:grid-cols-4">
+              <li><Project9 /></li>
               <li><Project8 /></li>
               <li><Project5 /></li>
               <li><Project6 /></li>
               <li><Project7 /></li>
-              <li><Project9 /></li>
+
+              <li><Project1 /></li>
             </ul>
           </li>
         </ul>
