--- a/src/components/project/model8.astro
+++ b/src/components/project/model8.astro
@@ -61,7 +61,6 @@
       data-modal-toggle="model8"
       class="h-full w-full py-2"
       type="button"
-      disabled
     >
       <div
         class="overflow-hidden rounded-lg bg-white shadow-lg hover:bg-neutral-200 hover:shadow-2xl"
@@ -70,7 +69,7 @@
         <div class="bg-gray-500 pb-1">
           <img
             class="mx-auto w-auto sm:h-24 md:h-56"
-
+            src="project/hack/hack.webp"
             height="auto"
             width="auto"
           />
@@ -136,28 +135,12 @@
                 <!-- Carousel wrapper -->
                 <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
                   <!-- Item 1 -->
-                  <div class="ease-700 hidden ease-in-out" data-carousel-item>
-                    <img
-                      src="/model/model8.0.webp "
-                      class="absolute left-1/2 top-1/2 block h-32 w-auto -translate-x-1/2 -translate-y-1/2 md:h-96"
-                      alt="..."
-                    />
-                  </div>
-                  <!-- Item 2 -->
-                  <div class="ease-700 hidden ease-in-out" data-carousel-item>
-                    <img
-                      src="/model/model8.1.webp "
-                      class="absolute left-1/2 top-1/2 block h-32 w-auto -translate-x-1/2 -translate-y-1/2 md:h-96"
-                      alt="..."
-                    />
-                  </div>
-                  <div class="ease-700 hidden ease-in-out" data-carousel-item>
-                    <img
-                      src="/model/model8.2.webp "
-                      class="absolute left-1/2 top-1/2 block h-32 w-auto -translate-x-1/2 -translate-y-1/2 md:h-96"
-                      alt="..."
-                    />
-                  </div>
+                  <img
+                    src="project/hack/hack.webp"
+                    class="absolute left-1/2 top-1/2 block h-32 w-auto -translate-x-1/2 -translate-y-1/2 md:h-96"
+                    alt="..."
+                  />
+
                   <!-- Item 3 -->
                 </div>
                 <!-- Slider indicators -->
@@ -256,6 +239,13 @@
             type="button"
             class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-600"
             >ปิด</button
+          >
+          <a
+            href="https://museum.creatorsgarten.org/"
+            data-modal-hide="model9"
+            type="button"
+            class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-600"
+            >Link</a
           >
         </div>
       </div>
