--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -155,6 +155,23 @@ import Contact from '../../components/script/Contact.astro'
                           </div>
                         </span>
                       </a>
+                      <a
+                      href="https://Siravijbb.com/SIRAVIJP.PORTKMUTT_R1.pdf"
+                      aria-label="CV"
+                      class="ml-1 mt-2"
+                    >
+                      <span
+                        ><div
+                          class="inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                        >
+                          <p
+                            class="mx-1 inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                          >
+                            KMUTT Portfolio
+                          </p>
+                        </div>
+                      </span>
+                    </a>
                     </div>
                   </li>
                 </p>
