--- a/src/components/project/model10.astro
+++ b/src/components/project/model10.astro
@@ -57,36 +57,36 @@
   <!-- Modal toggle -->
   <div class="mx-auto max-w-xs">
     <button
-      data-modal-target="model10"
-      data-modal-toggle="model10"
-      class="h-full w-full py-2"
-      type="button"
-      disabled
-    >
-      <div
-        class="overflow-hidden rounded-lg bg-white shadow-lg hover:bg-neutral-200 hover:shadow-2xl"
-        id="punroon"
-      >
-        <div class="bg-gray-500">
-          <img
-            class="mx-auto w-auto sm:h-24 md:h-56"
-            src="/member/webp/jirachai.webp"
-            alt="avatar"
-            height="auto"
-            width="auto"
-          />
-        </div>
-        <div class="">
-          <h1 class="text-lg font-bold text-gray-700">
-            Jiradchai Srirattanawong
-          </h1>
-          <p class="text-base text-gray-700">Marketing team of NB GEARS</p>
-        </div>
-      </div>
-    </button>
-  </div>
+    <!-- data-modal-target="model10"
+     data-modal-toggle="model10"
+     class="h-full w-full py-2"
+     type="button"
+     href="https://hokubirthday2024.polygang.fan/"-->
+   >
+     <div
+       class="overflow-hidden rounded-lg bg-white shadow-lg hover:bg-neutral-200 hover:shadow-2xl"
+       id="punroon"
+     >
+       <div class="bg-gray-500">
+         <img
+           class="mx-auto w-auto sm:h-24 md:h-56"
+           src="/project/hokubd/1.jpg"
+           alt="avatar"
+           height="auto"
+           width="auto"
+         />
+       </div>
+       <div class="">
+         <h1 class="text-lg font-bold text-gray-700">
+          Hoku Birthday Wish Sending And Reader Project
+         </h1>
+         <p class="text-base text-gray-700">First time of using DB</p>
+       </div>
+     </div>
+   </button>
+ </div>
 
-  <!-- Main modal -->
+ <!-- Main modal -->
   <div
     id="model10"
     tabindex="-1"
