--- a/src/components/script/focusnav.astro
+++ b/src/components/script/focusnav.astro
@@ -43,11 +43,10 @@
   } else if (currentPath.includes('/project')) {
     highlightLink('a[href="/project"]')
     // highlightLink("#dropdownNavbarLink");
-  }
-  else if (currentPath.includes('/#another-page')) {
+  } else if (currentPath.includes('/#another-page')) {
     highlightLink('a[href="/another-page"]')
     // highlightLink("#dropdownNavbarLink");
-  }else {
+  } else {
     // Default highlighting for the home page
     highlightLink('a[href="/"]')
   }
