--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -20,7 +20,7 @@ import Contact from '../../components/script/Contact.astro'
 <body>
   <AishaB />
   <main
-    class="customFont mx-auto max-w-7xl gap-4 rounded-xl shadow-xl dark:bg-[#332940] h-full "
+    class="customFont mx-auto h-full max-w-7xl gap-4 rounded-xl shadow-xl dark:bg-[#332940]"
   >
     <p>
       <p id="debutAnnment" class="text-center text-sm"></p>
@@ -30,7 +30,7 @@ import Contact from '../../components/script/Contact.astro'
         </h1>
         <div class="item-center md:text-md mx-auto text-sm">
           <p
-            class="mx-auto break-normal text-center text-[0.9rem] dark:text-gray-100 md:break-all md:text-[1.2rem]"
+            class="mx-auto break-normal text-center text-[0.9rem] md:break-all md:text-[1.2rem] dark:text-gray-100"
           >
             This website is build by <code>Siravij</code>
           </p>
@@ -38,7 +38,7 @@ import Contact from '../../components/script/Contact.astro'
       </div>
 
       <div
-        class="mx-auto rounded-lg bg-neutral-200 text-black dark:bg-[#121212] sm:px-2 md:px-2 md:pb-20"
+        class="mx-auto rounded-lg bg-neutral-200 text-black sm:px-2 md:px-2 md:pb-20 dark:bg-[#121212]"
       >
         <div
           class="pb-auto mx-auto rounded-lg py-10 sm:block sm:px-2 md:flex md:px-8"
@@ -47,7 +47,7 @@ import Contact from '../../components/script/Contact.astro'
             class="item-center mx-auto flex-auto rounded-lg bg-white px-5 text-center shadow-xl hover:shadow-2xl dark:bg-[#332940]"
           >
             <p
-              class="pt-3 text-center text-2xl dark:text-gray-100 md:pt-2 md:text-lg"
+              class="pt-3 text-center text-2xl md:pt-2 md:text-lg dark:text-gray-100"
             >
               Siravij Praevisavakij
             </p>
@@ -62,7 +62,7 @@ import Contact from '../../components/script/Contact.astro'
             </p>
           </div>
           <div
-            class="mt-3 overflow-hidden text-ellipsis rounded-lg bg-white px-2 py-3 text-sm shadow-xl dark:bg-[#332940] dark:text-gray-100 md:ml-2 md:mt-0 md:py-2 md:text-xl"
+            class="mt-3 overflow-hidden text-ellipsis rounded-lg bg-white px-2 py-3 text-sm shadow-xl md:ml-2 md:mt-0 md:py-2 md:text-xl dark:bg-[#332940] dark:text-gray-100"
           >
             <h1 class="text-center md:text-left">Biography</h1>
             <p>
@@ -156,22 +156,22 @@ import Contact from '../../components/script/Contact.astro'
                         </span>
                       </a>
                       <a
-                      href="https://Siravijbb.com/SIRAVIJP.PORTKMUTT_R1.pdf"
-                      aria-label="CV"
-                      class="ml-1 mt-2"
-                    >
-                      <span
-                        ><div
-                          class="inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
-                        >
-                          <p
-                            class="mx-1 inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                        href="https://Siravijbb.com/SIRAVIJP.PORTKMUTT_R1.pdf"
+                        aria-label="CV"
+                        class="ml-1 mt-2"
+                      >
+                        <span
+                          ><div
+                            class="inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
                           >
-                            KMUTT Portfolio
-                          </p>
-                        </div>
-                      </span>
-                    </a>
+                            <p
+                              class="mx-1 inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                            >
+                              KMUTT Portfolio
+                            </p>
+                          </div>
+                        </span>
+                      </a>
                     </div>
                   </li>
                 </p>
@@ -219,17 +219,17 @@ import Contact from '../../components/script/Contact.astro'
           text-align: center;
         }
         :root {
-      --accent: 124, 58, 237;
-      --accent-gradient: linear-gradient(
-        45deg,
-        rgb(var(--accent)),
-        #da62c4 30%,
-        white 60%
-      );
-    }
-    html {
-      font-family: system-ui, sans-serif;
-    }
+          --accent: 124, 58, 237;
+          --accent-gradient: linear-gradient(
+            45deg,
+            rgb(var(--accent)),
+            #da62c4 30%,
+            white 60%
+          );
+        }
+        html {
+          font-family: system-ui, sans-serif;
+        }
       </style>
     </p>
   </main>
