--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -27,17 +27,17 @@ import Footer from '../../components/Footer.astro'
         <p class="text-center text-2xl dark:text-gray-300">My availability</p>
         <div class="grid gap-1 p-4 py-2 sm:grid-cols-1 md:grid-cols-3">
           <p
-            class="dark:shadow-white-500/40 m-1 cursor-default rounded-xl bg-green-500 p-2 text-base shadow-xl hover:bg-gray-400 dark:text-[#03001c] sm:text-left md:text-center md:text-2xl"
+            class="dark:shadow-white-500/40 m-1 cursor-default rounded-xl bg-green-500 p-2 text-base shadow-xl hover:bg-gray-400 sm:text-left md:text-center md:text-2xl dark:text-[#03001c]"
           >
             Facebook
           </p>
           <p
-            class="m-1 cursor-default rounded-xl bg-green-500 p-2 text-base shadow-xl hover:bg-gray-400 dark:text-[#03001c] sm:text-left md:text-center md:text-2xl"
+            class="m-1 cursor-default rounded-xl bg-green-500 p-2 text-base shadow-xl hover:bg-gray-400 sm:text-left md:text-center md:text-2xl dark:text-[#03001c]"
           >
             Twitter
           </p>
           <p
-            class="m-1 cursor-no-drop rounded-xl bg-green-500 p-2 text-base shadow-xl hover:bg-gray-400 dark:text-[#03001c] sm:text-left md:text-center md:text-2xl"
+            class="m-1 cursor-no-drop rounded-xl bg-green-500 p-2 text-base shadow-xl hover:bg-gray-400 sm:text-left md:text-center md:text-2xl dark:text-[#03001c]"
           >
             Instragram
           </p>
@@ -60,7 +60,7 @@ import Footer from '../../components/Footer.astro'
             </p>
 
             <p
-              class="darkmo flex px-6 py-1 text-xs dark:text-gray-200 md:text-sm"
+              class="darkmo flex px-6 py-1 text-xs md:text-sm dark:text-gray-200"
             >
               Updated: 7/10/2023
             </p>
