--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer
-  class="px-auto flex items-center space-x-2 rounded-xl bg-white px-4 pb-8 pt-12 text-sm text-gray-600 dark:bg-[#121212] dark:text-white sm:text-base md:px-6"
+  class="px-auto flex items-center space-x-2 rounded-xl bg-white px-4 pb-8 pt-12 text-sm text-gray-600 sm:text-base md:px-6 dark:bg-[#121212] dark:text-white"
 >
   <div
     class="flex space-x-2 transition-transform duration-700 ease-in-out hover:rotate-[360deg]"
