--- a/src/components/layout.astro
+++ b/src/components/layout.astro
@@ -2,7 +2,6 @@
 import Navbar from './Navbar.astro'
 import Footer from './Footer.astro'
 
-
 export interface Props {
   title?: string
   description?: string
@@ -20,8 +19,8 @@ const transformedTitle =
 ---
 
 <!DOCTYPE html>
-<html lang="en" >
-  <head >
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -50,20 +49,16 @@ const transformedTitle =
 
     <meta property="og:image" content={image} />
     <meta property="twitter:image" content={image} />
-    <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"></script>
+    <script
+      is:inline
+      src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
+    ></script>
+  </head>
 
-
-</head
-  >
-
-  <body class=" bg-white dark:bg-[#121212]" >
+  <body class="bg-white dark:bg-[#121212]">
     <slot />
-
-
-
   </body>
   <style is:global>
-
     @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=IBM+Plex+Sans+Thai:wght@500&display=swap');
     body {
       font-family: 'IBM Plex Sans Thai', 'IBM Plex Sans Thai Looped', sans-serif;
@@ -73,5 +68,8 @@ const transformedTitle =
         DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
     }
   </style>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"></script>
+  <script
+    is:inline
+    src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
+  ></script>
 </html>
