--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,28 +16,28 @@ import Footer from '../components/Footer.astro'
 </head>
 
 <body>
-  <Navbar />
-  <div class="-pt-4 -mt-10"><Footer /></div>
-  <main class="mx-auto overflow-hidden bg-neutral-200 sm:h-full md:h-screen">
+  <main class="mx-auto h-screen overflow-hidden bg-neutral-500">
+    <Navbar />
+    <div class="-pt-4 -mt-10"><Footer /></div>
     <div
       class="relative flex h-screen w-full flex-col items-center justify-center overflow-hidden"
     >
-      <div
-        class="z-10 -mt-96 w-full pl-10 text-left text-4xl text-white lg:-mt-96"
-      >
-        <div class="w-fit rounded-xl bg-gray-900 p-4">
+      <div class="z-10 w-full pl-10 text-left text-4xl text-white lg:-mt-96">
+        <div class="mt-32 w-fit rounded-xl bg-gray-900 p-4 md:mt-72 lg:mt-96">
           Welcome to<b class="text-[#ab98ff] underline"> Siravij's</b> Personal Website
           <span class="block text-xl">I'm Siravij Praevisavakij</span>
           <span class="block text-xl">Feel free to browse my website!</span>
+          <span class="block text-xl">with Aisha Vtuber!</span>
         </div>
       </div>
 
-      <div class="z-10 -mt-96 flex pl-10 text-left text-white lg:-mt-96">
-      </div><div class="absolute w-full">
+      <div class="z-10 flex pl-10 text-left text-white lg:-mt-96"></div><div
+        class="absolute"
+      >
         <img
-          src="Siravij-RedDepot.jpg"
+          src="SiravijWithAisha.jpg"
           alt="It's Me,Siravij!"
-          class="-mt-96 w-full lg:-mt-80"
+          class="mx-auto -mt-80 w-full md:w-3/4"
           id="widget2"
         />
       </div>
