--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -15,7 +15,6 @@ import Project10 from '../../components/project/model10.astro'
 import Project11 from '../../components/project/model11.astro'
 import Project12 from '../../components/project/model12.astro'
 import Project13 from '../../components/project/model13.astro'
-
 ---
 
 <head>
@@ -37,7 +36,7 @@ import Project13 from '../../components/project/model13.astro'
     <div class="-mt-20">
       <div class="mx-auto rounded-xl py-4">
         <div
-          class="mx-auto max-w-4xl text-ellipsis rounded-lg bg-white py-4 shadow-xl dark:bg-[#332940] lg:px-8"
+          class="mx-auto max-w-4xl text-ellipsis rounded-lg bg-white py-4 shadow-xl lg:px-8 dark:bg-[#332940]"
         >
           <h1 class="pb-4 text-center text-2xl md:text-left">
             My on working/archived project
@@ -57,7 +56,7 @@ import Project13 from '../../components/project/model13.astro'
     </div>
 
     <div
-      class="rounded-lg bg-white px-6 shadow-xl dark:border-gray-700 dark:bg-[#332940] md:mx-4 lg:px-8"
+      class="rounded-lg bg-white px-6 shadow-xl md:mx-4 lg:px-8 dark:border-gray-700 dark:bg-[#332940]"
     >
       <h1 class="pt-4 text-center text-2xl md:text-left">My project</h1>
 
@@ -69,7 +68,6 @@ import Project13 from '../../components/project/model13.astro'
             </p>
             <ul class="grind grid grid-cols-1 gap-4 py-4 md:grid-cols-4">
               <li><Project3 /></li>
-
             </ul>
           </li>
           <li class="">
