starter pack edition

--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -67,13 +67,19 @@ import Contact from '../../components/script/Contact.astro'
             <h1 class="text-center md:text-left">Biography</h1>
             <p>
               <ol>
+                <li></li>
                 <li>
                   <p class="p-4">
                     Siravij the electrical and website engineer nerd, who love
                     to test the website speed and design electrical circuit.
                   </p>
                 </li>
-
+                <li>
+                  -Nickname: BB
+                </li>
+                <li>
+                  <p class="my-4">-Type: Introvert</p>
+                </li>
                 <p class="py-1">
                   <li>
                     <p class="inline items-center">
@@ -174,9 +180,59 @@ import Contact from '../../components/script/Contact.astro'
                       </a>
                     </div>
                   </li>
+            <li class="my-4">
+              <div>
+                - My Birthday: 15/12/2005
+              </div>
+            </li>
+                  <li class="my-4">
+                    <div>
+                      - My fav
+                      <ol>
+                        <li class="ml-6">1.Do something that normal ppl not do</li>
+                        <li class="ml-6">2.Listen music</li>
+                        <li class="ml-6">3.Travel</li>
+                      </ol>
+                    </div>
+                  </li>
+            <li class="my-4">
+              <div>
+                - My Dis-Fav
+                <ol>
+                  <li class="ml-6">1.Not get sleep</li>
+                  <li class="ml-6">2.Work</li>
+                  <li class="ml-6">3.Homework</li>
+                </ol>
+              </div>
+            </li>
+            <li class="my-4">
+              <div>
+                - My Fav Song:
+                <p class="inline items-center text-gray-500 outline  outline-1 rounded-lg px-1">
+                  <a href="https://www.youtube.com/watch?v=a51VH9BYzZA&list=RDa51VH9BYzZA&start_radio=1"
+                  ><span
+                  ><svg
+                    style="color: red"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="currentColor"
+                    class="bi-youtube mx-auto inline h-5 w-auto"
+                    viewBox="0 0 16 16"
+                  >
+              <path
+                d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"
+                fill="red"></path>
+            </svg>
+            Youtube
+          </span>
+                  </a>
                 </p>
+
+              </div>
+            </li>
+            <li>
+              <button class=""><p class="bg-red-500 rounded-lg px-4"> delightful Button</p></button>
+            </li>
               </ol>
-            </p>
           </div>
         </div>
       </div>
