--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,9 +33,9 @@ import Footer from '../components/Footer.astro'
         class="absolute"
       >
         <img
-          src="Siravij_Tsukuba.png"
+          src="Siravij_Tsukuba.webp"
           alt="It's Me,Siravij!"
-          class="mx-auto  w-full   mb-96 lg:mb-96"
+          class="mx-auto  w-full   mb-96 lg:mt-96 lg:mb-20 rotate-90"
           id="widget2"
         />
       </div>
