add:image and cv

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,9 +33,9 @@ import Footer from '../components/Footer.astro'
         class="absolute"
       >
         <img
-          src="Siravij_Tsukuba.webp"
+          src="SiravijINTBall.webp"
           alt="It's Me,Siravij!"
-          class="mx-auto  w-full  rotate-none mb-96 lg:mt-96 lg:mb-20 "
+          class="mx-auto sm:w-auto sm:h-auto  md:h-screen mb-56"
           id="widget2"
         />
       </div>
