--- a/src/components/bloglayout.astro
+++ b/src/components/bloglayout.astro
@@ -57,7 +57,8 @@ const transformedTitle = title === '' ? 'Siravij Blog' : `Siravij · ${title}`
   <style is:global>
     @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=Noto+Sans+Thai+Looped:wght@500&display=swap');
     body {
-      font-family: 'Noto Sans Thai Looped', 'IBM Plex Sans Thai Looped', sans-serif;
+      font-family: 'Noto Sans Thai Looped', 'IBM Plex Sans Thai Looped',
+        sans-serif;
     }
     :root {
       --accent: 124, 58, 237;
