--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import Footer from '../components/Footer.astro'
         <img
           src="Siravij_Tsukuba.webp"
           alt="It's Me,Siravij!"
-          class="mx-auto  w-full  rotate-none mb-96 lg:mt-96 lg:mb-20 "
+          class="rotate-none mx-auto mb-96 w-full lg:mb-20 lg:mt-96"
           id="widget2"
         />
       </div>
