add:CV and image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,9 +33,9 @@ import Footer from '../components/Footer.astro'
         class="absolute"
       >
         <img
-          src="Siravij_Tsukuba.webp"
+          src="Siravij_INTBall.webp"
           alt="It's Me,Siravij!"
-          class="rotate-none mx-auto mb-96 w-full lg:mb-20 lg:mt-96"
+          class="mx-auto mb-56 sm:h-auto sm:w-auto md:h-screen"
           id="widget2"
         />
       </div>
