--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -53,6 +53,7 @@ import FocusNav from '../components/script/focusnav.astro'
             >Blog</a
           >
         </li>
+        <!--
         <li>
           <button
             id="dropdownNavbarLink"
@@ -68,9 +69,8 @@ import FocusNav from '../components/script/focusnav.astro'
                 fill-rule="evenodd"
                 d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                 clip-rule="evenodd"></path></svg
-            ></button
-          >
-          <!-- Dropdown menu -->
+            ></button>
+          ###  Dropdown menu
           <div
             id="dropdownNavbar"
             class="z-10 hidden w-44 divide-y divide-gray-100 rounded-lg border border-gray-700 bg-white font-normal shadow dark:divide-gray-600 dark:bg-gray-700"
@@ -102,7 +102,7 @@ import FocusNav from '../components/script/focusnav.astro'
               </li>
             </ul>
           </div>
-
+        -->
           <li>
             <a
               href="/about-me"
@@ -118,7 +118,6 @@ import FocusNav from '../components/script/focusnav.astro'
               >Contact</a
             >
           </li>
-        </li>
       </ul>
     </div>
   </div>
